<?xml version="1.0" encoding="utf-8"?>

<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

        <RelativeLayout
            android:id="@+id/progressUi"
            android:layout_gravity="center"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <TextView
                android:id="@+id/progressMessage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:text="@string/progressMessage" />
            <ProgressBar
                android:indeterminate="true"
                android:visibility="visible"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_above="@id/progressMessage"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:maxHeight="40dp"
                android:maxWidth="40dp" />
        </RelativeLayout>

    <LinearLayout
        android:id="@+id/mainContent"
        android:visibility="gone"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical"
        tools:context="com.ayham.camcurrency.MainActivity">

        <!--<com.google.android.gms.ads.AdView
            xmlns:ads="http://schemas.android.com/apk/res-auto"
            android:id="@+id/adView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            ads:adSize="BANNER"
            ads:adUnitId="ca-app-pub-3940256099942544/6300978111">
        </com.google.android.gms.ads.AdView>-->
        <com.google.android.gms.ads.AdView
            xmlns:ads="http://schemas.android.com/apk/res-auto"
            android:id="@+id/adView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            ads:adSize="BANNER"
            ads:adUnitId="ca-app-pub-6004961354966987/1702144734">
        </com.google.android.gms.ads.AdView>

        <LinearLayout
            android:id="@+id/topLayout"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="5">
            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <androidx.camera.view.PreviewView
                    android:id="@+id/viewFinder"
                    android:layout_gravity="top|left"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">
                </androidx.camera.view.PreviewView>
                <SurfaceView
                    android:id="@+id/overlay"
                    android:layout_gravity="top|left"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" />
            </FrameLayout>
        </LinearLayout>

        <!--<com.google.android.gms.ads.AdView
            xmlns:ads="http://schemas.android.com/apk/res-auto"
            android:id="@+id/adView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            ads:adSize="BANNER"
            ads:adUnitId="ca-app-pub-3940256099942544/6300978111">
        </com.google.android.gms.ads.AdView>-->
        <com.google.android.gms.ads.AdView
            xmlns:ads="http://schemas.android.com/apk/res-auto"
            android:id="@+id/adView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            ads:adSize="BANNER"
            ads:adUnitId="ca-app-pub-6004961354966987/8055731253">
        </com.google.android.gms.ads.AdView>

        <LinearLayout
            android:id="@+id/bottomLayout"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:orientation="vertical"
            android:layout_weight="2">

            <Space
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="0.15" />

            <LinearLayout
                android:id="@+id/buttonLayout"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:weightSum="1">
                <Space
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.2" />

                <LinearLayout
                    android:id="@+id/currenciesLayout"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="0.6"
                    android:orientation="vertical"
                    android:weightSum="1">
                    <Space
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="0.05" />
                    <TextView
                        android:id="@+id/fromCurrency"
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="0.2"
                        android:text="@string/fromCurrencyText" />
                    <Spinner
                        android:id="@+id/fromCurrencySpinner"
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="0.25" />
                    <Space
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="0.05" />
                    <TextView
                        android:id="@+id/toCurrency"
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="0.2"
                        android:text="@string/toCurrencyText" />
                    <Spinner
                        android:id="@+id/toCurrencySpinner"
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="0.25" />
                </LinearLayout>

                <Space
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.2" />

            </LinearLayout>
            <LinearLayout
                android:id="@+id/outputLayout"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:weightSum="1">

                <Space
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.15" />

                <TextView
                    android:id="@+id/textView"
                    android:gravity="end|center"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.20"
                    android:text="@string/converted" />

                <TextView
                    android:id="@+id/convertedInputText"
                    android:gravity="center"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.20"
                    android:textSize="25sp"
                    android:text="@string/zero_val" />

                <TextView
                    android:id="@+id/textView2"
                    android:gravity="end|center"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.10"
                    android:text="@string/to" />

                <TextView
                    android:id="@+id/convertedOutputText"
                    android:gravity="center"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.40"
                    android:textSize="50sp"
                    android:text="@string/zero_val" />

                <Space
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.15" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</FrameLayout>